fixed card  gap

--- a/style.css
+++ b/style.css
@@ -636,11 +636,11 @@ button.tablinks {
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
 
-   
     .cards {
         padding-top: 5px;
         display: flex;
         flex-direction: column;
+        gap: 5px;
     }
 
 
